fixed actions on mobile with z-index

--- a/style.css
+++ b/style.css
@@ -59,13 +59,14 @@ header {
 
 header > button.play-pause {
 	cursor:pointer;
-	font-size:1em;
+	font-size:1.3em;
 	background-color: #f3c887;
 	color: #171717;
 	border: 0;
 	padding: 0.6em 1em;
 	border-radius: 4px;
 	font-family:'Fustat', "Helvetica", sans-serif;
+	font-weight:bold;
 }
 
 .actions {
@@ -128,7 +129,7 @@ header > button.play-pause {
 
 #song-modal.show {
 	opacity:1;
-	transform: translateY(-50px);
+	transform: translateY(0px);
 }
 
 #song-art {
@@ -207,20 +208,25 @@ header > button.play-pause {
 		left:0;
 		width:100%;
 		max-width:100%;
-		z-index:10;
-		flex-wrap:nowrap;
+		z-index:15;
+		flex-wrap:wrap;
 		justify-content:space-around;
 		align-items:center;
 		background-color: #f3c887;
+		gap:0;
 		
 	}
 
 	.actions > button, .actions > a {
-		width:33%;
-		max-width:33%;
+		width:50%;
 		border:0;
 		color:#171717;
 		text-align:center;
+	}
+
+	#song-modal.show {
+		opacity:1;
+		transform: translateY(-80px);
 	}
 
 }
